--- a/Bevy/Cargo.toml
+++ b/Bevy/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.14.2"
-bevy_rapier2d = "0.27.0"
+bevy-inspector-egui = "0.26.0"
+enum-iterator = "2.1.0"
+rand = "0.8.5"
